fixed home component ::before overflow

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -11,7 +11,7 @@
 .home:before {
   content: '';
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   /* background: #000; */
   /* opacity: 0.1; */
   position: absolute;
