--- a/src/styles/Predictions.css
+++ b/src/styles/Predictions.css
@@ -1,22 +1,22 @@
 .predictions {
   transition: all 0.5s ease;
-  /* background: url('../img/qatarstatic.png') no-repeat center; */
+  background: url('../img/qatarstatic.png') no-repeat center;
   /* covers the whole screen */
-  /* background-size: cover; */
+  background-size: cover;
 }
-/* .predictions::before {
+.predictions::before {
   width: 100%;
   height: 200px;
   position: absolute;
-} */
+}
 
-/* .predictions .content {
+.predictions .content {
   z-index: 10;
   padding-top: 5px;
   padding-bottom: 5px;
 
   color: #fff;
-} */
+}
 
 .predictions .containerGrid {
   font-size: 1.3rem;
